<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <GridLayout
        android:gravity="center"
        android:id="@+id/gridLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:rowCount="2">

        <!-- Card 1 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#FFA07A"
            app:cardCornerRadius="16dp"
            app:layout_constraintDimensionRatio="1:1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/daily_exploration"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/check" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 2 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#BBA9F9"
            app:cardCornerRadius="16dp"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/residental_upgrading"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/home" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 3 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#7BE2CC"
            app:cardCornerRadius="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/life_development"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/heart" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 4 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#FFD97E"
            app:cardCornerRadius="16dp"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/family_development"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/community" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

    <TextView
        android:id="@+id/textViewHope"
        android:layout_width="wrap_content"
        style="@style/HomeTitle"
        android:layout_below="@id/gridLayoutHome"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:text="@string/hope_you_like_it"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHope"
        android:layout_below="@id/textViewHope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />


</RelativeLayout>

</ScrollView>