<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/homeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"

        >

        <TextView
            style="@style/HomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_arman"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_launcher_foreground" />
    </LinearLayout>


    <GridLayout
        android:gravity="center"
        android:id="@+id/gridLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alignmentMode="alignMargins"
        android:layout_below="@id/homeHeader"
        android:columnCount="2"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:rowCount="2">

        <!-- Card 1 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#FFA07A"
            app:cardCornerRadius="16dp"
            app:layout_columnWeight="1"
            app:layout_constraintDimensionRatio="1:1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/daily_exploration"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/check" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 2 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#BBA9F9"
            app:cardCornerRadius="16dp"
            app:layout_columnWeight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/residental_upgrading"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/home" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 3 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#7BE2CC"
            app:cardCornerRadius="16dp"
            app:layout_columnWeight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/life_development"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/heart" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 4 -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#FFD97E"
            app:cardCornerRadius="16dp"
            app:layout_columnWeight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:text="@string/family_development"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/community" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

    <TextView
        android:id="@+id/textViewHope"
        android:layout_width="wrap_content"
        style="@style/HomeTitle"
        android:layout_below="@id/gridLayoutHome"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:text="@string/hope_you_like_it"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:layout_below="@id/textViewHope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Card 1 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_bg"
                android:padding="8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image1"
                    app:shapeAppearanceOverlay="@style/RoundedImageView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Healthy products"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:textColor="#000" />
            </LinearLayout>

            <!-- Card 2 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_bg"
                android:padding="8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image1"
                    app:shapeAppearanceOverlay="@style/RoundedImageView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Healthy items"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:textColor="#000" />
            </LinearLayout>


        </LinearLayout>
    </HorizontalScrollView>


</RelativeLayout>

